# exepack

./: Cargo.toml  README.md  build.rs  build.sh
decompressors/: Makefile  decompress_gzip.bin~  decompress_gzip.c  decompress_xz.bin~  decompress_xz.c  decompress_zstd.bin~  decompress_zstd.c  temsxz  temsxz.c  temsxz.linux.static.musl  temsxz.musl
decompressors/embedded/: temsxz.c
decompressors/full/: musl.txt
decompressors/full/xz-5.8.2/: Makefile  config.h  config.status  libtool
decompressors/full/xz-5.8.2/debug/: Makefile
decompressors/full/xz-5.8.2/lib/: Makefile
decompressors/full/xz-5.8.2/po/: Makefile  Makefile.in
decompressors/full/xz-5.8.2/src/: Makefile
decompressors/full/xz-5.8.2/src/liblzma/: Makefile  liblzma.la  liblzma.pc  liblzma_la-alone_decoder.lo  liblzma_la-alone_encoder.lo  liblzma_la-arm.lo  liblzma_la-arm64.lo  liblzma_la-armthumb.lo  liblzma_la-auto_decoder.lo  liblzma_la-block_buffer_decoder.lo  liblzma_la-block_buffer_encoder.lo  liblzma_la-block_decoder.lo  liblzma_la-block_encoder.lo  liblzma_la-block_header_decoder.lo  liblzma_la-block_header_encoder.lo  liblzma_la-block_util.lo  liblzma_la-check.lo  liblzma_la-common.lo  liblzma_la-crc32_fast.lo  liblzma_la-crc64_fast.lo  liblzma_la-delta_common.lo  liblzma_la-delta_decoder.lo  liblzma_la-delta_encoder.lo  liblzma_la-easy_buffer_encoder.lo  liblzma_la-easy_decoder_memusage.lo  liblzma_la-easy_encoder.lo  liblzma_la-easy_encoder_memusage.lo  liblzma_la-easy_preset.lo  liblzma_la-fastpos_table.lo  liblzma_la-ia64.lo  (+51 more)
decompressors/full/xz-5.8.2/tests/: Makefile
src/: main.rs
(+89 files in other folders)
