[package]
name = "tems-exepack"
version = "0.5.0"
edition = "2021"
build = "build.rs"
authors = ["Philippe TEMESI"]
description = "Executable file compressor with system compressors and embedded TEMS XZ decompressor"
license = "MIT"
repository = "https://www.tems.be"

[dependencies]
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"

[build-dependencies]
cc = "1.0"

