[package]
name = "zexe"
version = "0.1.0"
authors = ["Philippe TEMESI <philippe@tems.be>"]
edition = "2021"
description = "Self-extracting executable compressor inspired by OpenBSD gzexe"
license = "MIT"
repository = "https://www.tems.be"

[dependencies]
flate2 = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = true
incremental = true
