[package]
name = "zexe"
version = "0.1.0"
authors = ["Philippe TEMESI <philippe@tems.be>"]
edition = "2021"
description = "Self-extracting executable compressor using Zopfli (max compression)"
license = "MIT"
repository = "https://www.tems.be"

[dependencies]
zopfli = { version = "0.8", features = ["gzip", "std"] }
flate2 = "1.0"  # Gardé pour la décompression uniquement

